<resources>
    <string name="app_name">MyShop</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="skip">SKIP NOW</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="location">Location</string>
    <string name="contact_number">Contact Number</string>
    <string name="title_activity_login">LoginActivity</string>
</resources>
