<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="myshop.saa.myshop.SignUpActivity"
    android:theme="@android:style/Theme.Translucent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="@drawable/abc_edit_text_material"
        android:background="@drawable/kirana_logo_bg">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/firstName"
            android:text="@string/first_name"
            android:background="@color/abc_background_cache_hint_selector_material_light"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastName"
            android:text="@string/last_name"
            android:background="@color/abc_background_cache_hint_selector_material_light"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:background="@color/abc_background_cache_hint_selector_material_light"
            android:text="@string/email"
            style="@android:style/TextAppearance.DeviceDefault.Medium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:background="@color/abc_background_cache_hint_selector_material_light"
            android:text="@string/password"
            style="@android:style/TextAppearance.DeviceDefault.Medium"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/phoneNumber"
            android:background="@color/abc_background_cache_hint_selector_material_light"
            android:text="@string/contact_number"
            style="@android:style/TextAppearance.DeviceDefault.Medium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:background="@color/abc_background_cache_hint_selector_material_light"
            android:text="@string/location"
            style="@android:style/TextAppearance.DeviceDefault.Medium"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
</RelativeLayout>